tests/ui/mismatched_types/mismatch-args-vargs-issue-130372.stderr
error[E0060]: this function takes at least 1 argument but 0 arguments were supplied
  --> $DIR/mismatch-args-vargs-issue-130372.rs:9:9
   |
LL |         test_va_copy();
   |         ^^^^^^^^^^^^-- argument #1 of type `u64` is missing
   |
note: function defined here
  --> $DIR/mismatch-args-vargs-issue-130372.rs:5:22
   |
LL | unsafe extern "C" fn test_va_copy(_: u64, mut ap: ...) {}
   |                      ^^^^^^^^^^^^ ------
help: provide the argument
   |
LL |         test_va_copy(/* u64 */);
   |                      +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0060`.
